updated package.json due to derelict-gl3 breaking dmd 2.066 compatibility

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
             "sourcePaths": [ "opengl/gfm/opengl" ],
             "importPaths": [ "opengl" ],
             "dependencies": {
-                "derelict-gl3": "~master",
+                "derelict-gl3": "==1.0.14",
                 "gfm:core": "~master",
                 "gfm:math": "~master"
             }
